fixed every sonarQube issues