@@ -14,7 +14,6 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -39,7 +38,7 @@ public class ProfileService {
         return profileRepository.findAll()
                 .stream()
                 .map(mapperService::profileToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
